--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-language" content="fr"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=EJDrone">
     <meta name="author" content="Alexis Pambourg">
+    <meta name="keywords" content="EJ-Drone Drone photo a&eacute;rienne Eric Joly">
+    <meta name="reply-to" content="info@nomdusite.com">
+    <meta name="category" content="drone">
+
 
     <title>EJ-Drone</title>
 
