Français + Favicon + Color a finir

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta http-equiv="content-language" content="fr"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=EJDrone">
-    <meta name="author" content="Alexis Pambourg">
-    <meta name="keywords" content="EJ-Drone Drone photo a&eacute;rienne Eric Joly">
-    <meta name="reply-to" content="info@nomdusite.com">
-    <meta name="category" content="drone">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Photo et vid&eacute;o a&eacute;rienne de drone faites par EJDrone Eric Joly vidéo aérienne"/>
+    <meta name="abstract" content="Photo et vid&eacute;o a&eacute;rienne de drone faites par EJDrone Eric Joly vidéo aérienne"/>
+    <meta name="author" content="Alexis Pambourg"/>
+    <meta name="keywords" content="vidéo aérienne EJ drone photo vid&eacute;o a&eacute;rienne  Eric Joly"/>
+    <meta name="reply-to" content="info@nomdusite.com"/>
+    <meta name="category" content="drone, photo, video"/>
+    <meta name="robots" content="index"/>
 
-
-    <title>EJ-Drone</title>
+    <title>EJ Drone</title>
 
     <link rel="stylesheet" href="Content/Plugins/bootstrap-3.3.6/css/bootstrap.min.css" type="text/css">
 
@@ -33,6 +33,28 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="Content/Custom/img/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="Content/Custom/img/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="Content/Custom/img/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="Content/Custom/img/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="Content/Custom/img/favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="Content/Custom/img/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="Content/Custom/img/favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="Content/Custom/img/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="Content/Custom/img/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="Content/Custom/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="Content/Custom/img/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="Content/Custom/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="Content/Custom/img/favicon/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="Content/Custom/img/favicon/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="Content/Custom/img/favicon/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="Content/Custom/img/favicon/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="Content/Custom/img/favicon/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="Content/Custom/img/favicon/mstile-310x310.png" />
+
 </head>
 
 <body id="page-top">
@@ -46,20 +68,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">EJ Drone</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Photos</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,32 +93,19 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1>EJ Drone</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>Spécialiser dans la prise de vue photos et vidéo aériennes en haute définitions</p>
+                <a href="#services" class="btn btn-primary btn-xl page-scroll">En savoir plus</a>
             </div>
         </div>
     </header>
-
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">À votre services</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -109,29 +115,29 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Photos</h3>
+                        <p class="text-muted">Suivez le changement de saison sur l'environnement, maitriser votre chantier, valoriser votre bien immobilier grâce au prise de vue aérienne</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Vidéo</h3>
+                        <p class="text-muted">Filmez vos actions d'un point de vue aérien, réalisez des inspection ou seul le drone peux aller, vision thermique !</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
+                        <h3>Panorama</h3>
                         <p class="text-muted">We update dependencies to keep things fresh.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Événement</h3>
+                        <p class="text-muted">Parfait pour vos photos de mariage, anniversaire !</p>
                     </div>
                 </div>
             </div>
@@ -238,8 +244,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <h2>Homologation !</h2>
+                <a href="#contact" class="btn btn-default btn-xl wow tada">Contactez moi !</a>
             </div>
         </div>
     </aside>
@@ -248,17 +254,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Je peux vous aidez !</h2>
                     <hr class="primary">
+                    <p>Certifier diplomer expérimenter</p>
                     <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <p>06 06 06 06 06</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">ej.drone@orange.fr</a></p>
+                </div>
+
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:your-email@your-domain.com">Facebook</a></p>
                 </div>
             </div>
         </div>
